# Evident

./: .editorconfig  .eleventy.js  .env.template  .eslintrc.cjs  .gitattributes  .gitignore  .licenserc.toml  .lighthouserc.json  .pre-commit-config.yaml  .prettierignore  .repo-profile.json  .stylelintrc.cjs  .stylelintrc.json  404.html  90-DAY-EXECUTION-SUMMARY.md  ACTION-CHECKLIST.md  ADMIN-API-REFERENCE.md  ADMIN-BACKEND-GUIDE.md  ADMIN-COMPLETE.md  ADMIN-QUICK-START.md  AGENTS-INSTALLATION-COMPLETE.md  AGENTS-QUICK-REF.md  AGENTS-SDK-COMPLETE.md  AGENTS-TESTING-COMPLETE.md  AGENTS-V2-ENHANCEMENTS.md  AI-TOOLS-INTERFACE-SUMMARY.md  ANIMATION-INTEGRATION-COMPLETE.md  ANIMATION-UPGRADE-COMPLETE.md  ATTRIBUTION.md  BARBER-CAM-ROADMAP.md  BARBERX-GOLDEN-AGE-REBRAND.md  BATCH-PDF-UPLOAD-README.md  BEFORE-AFTER-TRANSFORMATION.md  BWC-ANALYSIS-GUIDE.md  BWC-USER-PROCESS.md  CNAME  CODE INSPIRATION.txt  COMMERCIAL-LICENSE.md  COMPANY-OVERVIEW.md  COMPLETE-ATTRIBUTION-SUMMARY.md  (+150 more)
backend/: .env.template  .gitignore  DEPENDENCY_UPGRADE.md  Dockerfile.enterprise  Procfile  README.md  __init__.py  app.py  conftest.py  docker-compose.enterprise.yml  pyproject.toml  render.yaml  render_minimal.yaml  requirements-ai.txt  requirements-full-stack.txt  requirements-local-dev.txt  requirements-production.txt  requirements.txt  wsgi.py
backend/api/: __init__.py  admin.py  analysis.py  auth.py  chatgpt.py  document_optimizer.py  enhanced_chat.py  evidence.py  legal_chatbot.py  legal_library.py  metering.py  municipal.py  reasoning_pipeline.py  stripe_endpoints.py  trinity.py  upload.py  (+1 more)
(+2063 files in other folders)
