[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
show-fixes = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # handled by formatter / line-length
unfixable = ["F401"]  # optional: keep unused-import removal manual

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["backend", "tools"]  # adjust to your import roots

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

[project]
requires-python = ">=3.12"
