[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
show-fixes = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

[project]
requires-python = ">=3.12"
